@@ -96,6 +96,16 @@ android {
         targetCompatibility = JavaVersion.VERSION_11
         isCoreLibraryDesugaringEnabled = true
     }
+    testOptions {
+        unitTests {
+            all {
+                it.jvmArgs(
+                    "-XX:+EnableDynamicAgentLoading",
+                    "-Xshare:off"
+                )
+            }
+        }
+    }
     buildFeatures {
         compose = true
         buildConfig = true
